<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.detail.tvshow.DetailTvShowActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="0dp">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/tb_main"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:paddingHorizontal="8dp"
                android:layout_gravity="center|center_horizontal"
                app:navigationIcon="@drawable/ic_back" />

        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Detail TV Show"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:fontFamily="@font/poppins_regular"
            app:layout_anchor="@+id/appBarLayout"
            app:layout_anchorGravity="center" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="24dp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/img_show"
                    android:layout_width="180dp"
                    android:layout_height="270dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:shapeAppearance="@style/circleDetailMovie" />

                <TextView
                    android:id="@+id/tv_tvs_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/poppins_bold"
                    android:maxLines="2"
                    android:textColor="@color/myTheme"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/img_show" />

                <TextView
                    android:id="@+id/tv_show_info"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="@font/poppins_regular"
                    android:maxLines="1"
                    android:paddingTop="5dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/tv_tvs_title"
                    app:layout_constraintTop_toBottomOf="@+id/tv_tvs_title" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="4dp"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_show_info"
                    app:layout_constraintStart_toEndOf="@+id/tv_show_info"
                    app:layout_constraintTop_toTopOf="@+id/tv_show_info"
                    app:srcCompat="@drawable/ic_rating" />

                <TextView
                    android:id="@+id/tv_show_language"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:drawablePadding="7dp"
                    android:fontFamily="@font/poppins_regular"
                    android:paddingTop="5dp"
                    android:textSize="16sp"
                    app:drawableStartCompat="@drawable/ic_language"
                    app:layout_constraintEnd_toEndOf="@+id/tv_show_title"
                    app:layout_constraintStart_toStartOf="@+id/tv_show_info"
                    app:layout_constraintTop_toBottomOf="@+id/tv_show_info" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/cg_show_genre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    app:layout_constraintEnd_toEndOf="@+id/tv_show_title"
                    app:layout_constraintStart_toStartOf="@+id/tv_show_title"
                    app:layout_constraintTop_toBottomOf="@+id/tv_show_language" />

                <TextView
                    android:id="@+id/tv_overview"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/poppins_bold"
                    android:maxLines="1"
                    android:text="Overview"
                    android:textColor="@color/myTheme"
                    android:textSize="17sp"
                    app:layout_constraintStart_toStartOf="@+id/tv_show_title"
                    app:layout_constraintTop_toBottomOf="@+id/cg_show_genre" />

                <TextView
                    android:id="@+id/tv_show_overview"
                    android:layout_width="0dp"
                    android:layout_height="350dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/poppins_regular"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/tv_overview"
                    app:layout_constraintTop_toBottomOf="@+id/tv_overview" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

        <ImageView
            android:id="@+id/bg_transparent"
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:layout_gravity="bottom|center"
            android:src="@drawable/shape_bg_gradient_detail"
            app:layout_constraintBottom_toBottomOf="@+id/img_developer_detail"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_share"
            android:layout_width="125dp"
            android:layout_height="70dp"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="16dp"
            android:textAllCaps="false"
            android:fontFamily="@font/poppins_bold"
            android:text="Share"
            android:textSize="18sp"
            app:cornerRadius="10dp"/>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>