<resources>
    <string name="app_name">iMOTV - Movie &amp; TV Show</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movie">Movie</string>
    <string name="tv_show">TV Show</string>
</resources>